# suffixTree

./: CMakeLists.txt  README.md  main.cpp
